# django-2-t1m0nya0

./: db.sqlite3  pyproject.toml
TamirlanHw/: asgi.py  db.sqlite3  manage.py  pyproject.toml  settings.py  urls.py
TamirlanHw/TamirlanHw/: settings.py  urls.py  wsgi.py
TamirlanHw/news/: forms.py  models.py  tests.py  urls.py  views.py
TamirlanHw/news/migrations/: 0002_commentmodel_created_at.py  0003_commentmodel_user_newsmodel_user.py
TamirlanHw/templates/: base.html
TamirlanHw/templates/news/: detail.html  news.html  post.html
TamirlanHw/templates/registration/: login.html  sign_up.html
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py
project/project/: settings.py
templates/: base.html
templates/news/: change.html  detail.html  news.html
