[tool.poetry]
name = "tamirlanhw"
version = "0.1.0"
description = ""
authors = ["tamirlan <tamirlan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^4.2.4"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
